1.0.09-beta
-Added SoundAlerts integrations
-Added Tangia Integration. Since tangia doesn't show how many bits are spent on it in chat, you will have to set how much to give to the user
-Changed how Blerp and SoundAlerts works. The return is now a percent based to allow for more finite control
-Fixed bug where if you !cheer, it would add the bits to the user also

1.0.08.01-beta
-Fix for rate cooldown spamming chat on every message

1.0.08-beta
-Added a way to disable storing of user currency allowing commands to only be executed by cheering the exact amount with '!' in front of the cheer
-Fixed bug with blerp integration where if a user sends a blerp and then 1 bit, it will deduct that bit
-Adjusted chat settings layout for readability

1.0.07-beta
-Fixed error in how blerp integration reads the twitch message. Should properly work now!

1.0.06-beta
-Added a random up or down for turn mouse commands
-Added OR function to command builder. The OR operator in your script is used to randomly choose between two functions. When the script encounters OR, it will pick one of the next two methods at random and skip the other

1.0.05-beta
-Fixed white box issue on the pixelate overlay
-More pixelated overlay. It wasn't bad enough
-Update window now plays a notification sound
-Updated !help 
-Updated !about to the new GitHub link
-Fixed issue with blerp integration not working
-Fixed "You don't have enough bits to execute the command" not replacing bits with your currency name
-Updated admin/moderator chat commands to print out your currency name instead of just bits

1.0.04-beta
-Finished moderator permissions, now you can give certain mods access to help smooth over controlling chat while you focus on gaming
-Mod permissions include refunds, give or remove currency, add or remove a command, or ban and unban a user from using the bot