@@ -157,6 +157,9 @@
             <setting name="isTangiaEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="isDirectRunEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </UiBot.Properties.Settings>
     </userSettings>
 </configuration>
