@@ -11,8 +11,8 @@
     <Platforms>AnyCPU;x64</Platforms>
     <ApplicationIcon>icon2.ico</ApplicationIcon>
     <AssemblyName>Sweat Bot</AssemblyName>
-    <Version>1.0.09.01-beta</Version>
-    <AssemblyVersion>1.0.09.01</AssemblyVersion>
+    <Version>1.0.09.02-beta</Version>
+    <AssemblyVersion>1.0.09.02</AssemblyVersion>
 	  <PublishSingleFile>true</PublishSingleFile>
 	  <ApplicationManifest>app.manifest</ApplicationManifest>
 	  <Authors>Sprollucy</Authors>
